# django-action

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/k8/: deployment.yaml
.github/worflows/: build.yml
.github/workflows/: main-multi-stage.yml  main.yml
accounts/: admin.py  managers.py  models.py  routers.py  serializers.py  urls.py  utils.py  views.py  viewsets.py
accounts/migrations/: 0001_initial.py  0002_pro_user.py  0003_auto_20220330_1306.py  0004_auto_20220407_1201.py  0005_customuser_username.py  0006_auto_20220409_1836.py  0007_remove_customuser_email_verification_token.py  0008_rename_is_email_verified_customuser_is_verified.py  0009_employerdetails.py  0010_alter_employerdetails_user.py  0011_alter_employerdetails_user.py  (+6 more)
api_tracking/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/: .env  asgi.py  settings.py  tokens.py  urls.py
chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
elastic/: apps.py  documents.py  serializers.py  urls.py  views.py
employer_profile/: admin.py  apps.py  models.py  recommender.py  routers.py  serializers.py  urls.py  views.py  viewsets.py
resume/: admin.py  apps.py  models.py  serializers.py  signals.py  throttle.py  urls.py  views.py  viewsets.py
stripe_payments/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
templates/: email-verify.html  employer_message.html  reset-password.html
urlShortner/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
z/: Dockerfile
(+47 files in other folders)
