[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Appwharf"

[tool.poetry.dependencies]
python = "^3.8"
djoser = "^2.0.3"
validate-email = "^1.3"
httpie = "^2.2.0"
django-cors-headers = "^3.4.0"
djangorestframework = "^3.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
